objects/project_cloud__Timesheet__c.object
<CustomObject>
    <description>Timesheets of users in your system</description>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</description>
        <formula>project_cloud__Start__c + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <description>This is a hash of the OwnerId of the Timesheet and the start date, it is used by the validation rule to enforce unique timesheets</description>
        <formula>CASESAFEID(OwnerId) + TEXT(YEAR(project_cloud__Start__c)) + &apos;-&apos; + TEXT(MONTH(project_cloud__Start__c)) + &apos;-&apos; + TEXT(DAY(project_cloud__Start__c))</formula>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>The date the Timesheet entries can begin</description>
        <inlineHelpText>The first day of the Timesheet</inlineHelpText>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>project_cloud__All_Timesheets</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>project_cloud__Start_Date_Read_Only</fullName>
        <active>true</active>
        <description>The Start Date on a Timesheet is required and once set can not be changed.</description>
        <errorConditionFormula>ISBLANK(project_cloud__Start__c) || ISCHANGED(project_cloud__Start__c)</errorConditionFormula>
        <errorDisplayField>project_cloud__Start__c</errorDisplayField>
        <errorMessage>The Start Date on a Timesheet is required and once set can not be changed.</errorMessage>
    </validationRules>
</CustomObject>